--- a/styles.css
+++ b/styles.css
@@ -58,8 +58,10 @@
   }
 
   table { page-break-inside:auto }
-    tr    { page-break-inside:avoid; page-break-after:auto }
-    thead { display:table-header-group }
+  tr    { page-break-inside:avoid; page-break-after:auto; }
+  thead { display:table-header-group; }
 
   .tabletable { page-break-before: always;}
 }
+
+.tabletable tr td { border-collapse: collapse; border-top: solid 1px #333;}
